--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">App</string>
+    <string name="app_name">Bastau</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Новости</string>
     <string name="title_notifications">Профиль</string>
+    <string name="default_notification_channel_id">41341</string>
+    <string name="fcm_message">Test</string>
 </resources>
